# diagramma

./: .editorconfig  .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md  codecov.yml  package.json  pnpm-lock.yaml  rustfmt.toml  tsconfig.base.json  turbo.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmark.yml  docs.yml  publish.yml  release.yml  rust-ci.yml  ts-ci.yml
crates/diagramma-core/: Cargo.toml  README.md
crates/diagramma-core/schemas/: diagram-spec.json
crates/diagramma-core/src/: lib.rs
crates/diagramma-layout/: Cargo.toml  README.md
crates/diagramma-layout/benches/: layout.rs
crates/diagramma-layout/src/: flowchart.rs  lib.rs  routing.rs  structural.rs  text.rs  types.rs
crates/diagramma-layout/src/snapshots/: diagramma_layout__tests__flowchart_basic_layout.snap  diagramma_layout__tests__structural_nested_layout.snap
crates/diagramma-layout/src/tests/: mod.rs
crates/diagramma-layout/src/tests/snapshots/: diagramma_layout__tests__flowchart_basic_layout.snap  diagramma_layout__tests__structural_nested_layout.snap
crates/diagramma-svg/: Cargo.toml  README.md
crates/diagramma-svg/src/: lib.rs  theme.rs  tokens.rs
crates/diagramma-svg/src/elements/: container.rs  edge.rs  mod.rs  node.rs  text.rs
scripts/: publish-reserve.sh
