[workspace]
resolver = "3"
members = [
    "crates/diagramma-core",
    "crates/diagramma-layout",
    "crates/diagramma-svg",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SHA888/diagramma"
authors = ["Kresna Sucandra"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
