[package]
name = "diagramma-core"
description = "Core type definitions for diagramma — nodes, edges, containers, and diagram specs"
readme = "README.md"
keywords = ["diagram", "svg", "visualization", "types"]
categories = ["visualization", "data-structures"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true
