[package]
name = "diagramma-core"
description = "Core type definitions for diagramma — nodes, edges, containers, and diagram specs"
readme = "README.md"
keywords = ["diagram", "svg", "visualization", "types"]
categories = ["visualization", "data-structures"]
include = [
    "Cargo.toml",
    "README.md",
    "src/**",
    "schemas/**",
]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
smol_str = { version = "0.2", features = ["serde"] }
thiserror = "1.0"
schemars = { version = "0.8", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
proptest = "1.5"
